[gd_scene load_steps=5 format=3 uid="uid://g5d7w2alo16g"]

[ext_resource type="Script" path="res://Prog52aFunc.gd" id="1_5bne4"]

[sub_resource type="LabelSettings" id="LabelSettings_f8qki"]
font_size = 40

[sub_resource type="LabelSettings" id="LabelSettings_kuynm"]
font_size = 40

[sub_resource type="LabelSettings" id="LabelSettings_aqwl8"]
font_size = 30

[node name="Prog52aFunc" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5bne4")

[node name="txtLen" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 51.0
offset_top = 35.0
offset_right = 432.0
offset_bottom = 158.0

[node name="txtWid" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 48.0
offset_top = 195.0
offset_right = 429.0
offset_bottom = 318.0

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 469.0
offset_top = 42.0
offset_right = 918.0
offset_bottom = 179.0
text = "Length"
label_settings = SubResource("LabelSettings_f8qki")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 474.0
offset_top = 188.0
offset_right = 923.0
offset_bottom = 325.0
text = "Width"
label_settings = SubResource("LabelSettings_kuynm")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="."]
layout_mode = 0
offset_left = 51.0
offset_top = 339.0
offset_right = 1121.0
offset_bottom = 519.0
label_settings = SubResource("LabelSettings_aqwl8")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 46.0
offset_top = 538.0
offset_right = 245.0
offset_bottom = 618.0
text = "Calculate"

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 452.0
offset_top = 534.0
offset_right = 651.0
offset_bottom = 614.0
text = "Clear"

[node name="Button3" type="Button" parent="."]
layout_mode = 0
offset_left = 881.0
offset_top = 536.0
offset_right = 1080.0
offset_bottom = 616.0
text = "Exit"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
